--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum exercitationem ea, itaque harum, vel culpa reiciendis veniam iure, soluta sunt quisquam quos. Vitae, labore dolorum est natus odio voluptate id!
         
       </p><a href="#">
-        <button>get in touch</button></a>
+        <button>get in touch!!!</button></a>
       <div class="separator"></div>
       <h2>Projects</h2>
       <article class="project">
