--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,20 @@
         <div class="wrapper">
           <h2>Projects</h2>
           <div class="projects">
-            <article class="project">
-              <header>
-                <h3>Project Title</h3>
-              </header>
-              <p>Description of work performed</p>
-              <p>@collaborators</p>
-            </article>
+            <div class="project">
+              <div class="header">
+                <h3>Kelly and Her Hair</h3>
+              </div>
+<p>Oh, it's something</p>
+              <p>wut</p>
+            </div>
+            <div class="project">
+              <div class="header">
+                <h3>Hello world!</h3>
+              </div>
+<p>My project description</p>
+              <p>2b design</p>
+            </div>
           </div>
         </div>
         <div id="contact" class="wrapper">
