--- a/public/index.html
+++ b/public/index.html
@@ -21,18 +21,32 @@
           <h2>Projects</h2>
           <div class="projects">
             <div class="project">
-              <div class="header">
-                <h3>Kelly and Her Hair</h3>
-              </div>
-<p>Oh, it's something</p>
-              <p>wut</p>
+              <div class="header"><a href="http://ceibaadventures.com/" title="Ceiba Adventures" target="_blank">
+                  <h3>Ceiba Adventures</h3></a></div>
             </div>
             <div class="project">
-              <div class="header">
-                <h3>Hello world!</h3>
-              </div>
-<p>My project description</p>
-              <p>2b design</p>
+              <div class="header"><a href="http://diabloburger.com" title="Diablo Burger" target="_blank">
+                  <h3>Diablo Burger</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">
+                  <h3>Ecoss</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://helptile.com" title="HelpTile" target="_blank">
+                  <h3>HelpTile</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance" target="_blank">
+                  <h3>KLB Insurance</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">
+                  <h3>Karma Sushi Bar Grill</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://mountainsportsflagstaff.com/" title="Mountain Sports Flagstaff" target="_blank">
+                  <h3>Mountain Sports Flagstaff</h3></a></div>
             </div>
           </div>
         </div>
@@ -42,7 +56,7 @@
         </div>
       </div>
       <div class="footer">
-        <p>2015 &copy; thaddeus reid stewart</p>
+        <p>2016</p>
       </div><script src='js/main.js'></script>
     </body>
   </head>
