spelling fix in compile

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div class="content">     
         <div class="wrapper">
           <h1>Thaddeus Reid</h1>
-          <h4><em>Flagtaff, Arizona</em></h4>
+          <h4><em>Flagstaff, Arizona</em></h4>
           <p>
             Hola, I'm a front end web developer with an interest in computers, design, filmmaking, homebrewing, and many other amazing forms of art/life. I would love to hear from you whether you're wanting to build something or have a great song to share.
             
@@ -29,12 +29,12 @@
                   <h3>Diablo Burger</h3></a></div>
             </div>
             <div class="project">
-              <div class="header"><a href="http://helptile.com" title="HelpTile" target="_blank">
-                  <h3>HelpTile</h3></a></div>
-            </div>
-            <div class="project">
               <div class="header"><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">
                   <h3>Ecoss</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://helptile.com" title="HelpTile" target="_blank">
+                  <h3>HelpTile</h3></a></div>
             </div>
             <div class="project">
               <div class="header"><a href="http://karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">
