--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Thaddeus Reid is a web developer, designer, and homebrew wizard living in Flagstaff, Arizona. Want to build something togther? Take a peek at his portfolio and leave a message.">
     <meta name="author" content="Thaddeus Reid">
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='css/master.css' />
-    <title>test title</title>
+    <title>thaddeus reid | web developer and designer living in flagstaff, arizona</title>
     <body>
       <div class="content">     
         <div class="wrapper">
