--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,16 @@
                   <h3>Ecoss</h3></a></div>
             </div>
             <div class="project">
+              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance" target="_blank">
+                  <h3>KLB Insurance</h3></a></div>
+            </div>
+            <div class="project">
               <div class="header"><a href="http://diabloburger.com" title="Diablo Burger" target="_blank">
                   <h3>Diablo Burger</h3></a></div>
             </div>
             <div class="project">
               <div class="header"><a href="http://helptile.com" title="HelpTile" target="_blank">
                   <h3>HelpTile</h3></a></div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance" target="_blank">
-                  <h3>KLB Insurance</h3></a></div>
             </div>
             <div class="project">
               <div class="header"><a href="http://karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">
@@ -53,7 +53,7 @@
         </div>
         <div id="contact" class="wrapper">
           <h2>Talk To Me</h2><a href="mailto:hello@thaddeusreid.com">hello@thaddeusreid.com</a>
-          <div class="social-links"><a href="https://github.com/thaddeusreid" class="social-github"></a><a href="https://twitter.com/thaddeusreid" class="social-twitter"></a></div>
+          <div class="social-links"><a href="https://github.com/thaddeusreid" class="social-github"></a><a href="https://twitter.com/thaddeus_reid" class="social-twitter"></a></div>
         </div>
       </div>
       <div class="footer">
