revised site description

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
           <h1>Thaddeus Reid</h1>
           <h4><em>Flagstaff, Arizona</em></h4>
           <p>
-            Hola, I'm a front end web developer with an interest in computers, design, filmmaking, homebrewing, and many other amazing forms of art/life. I would love to hear from you whether you're wanting to build something or have a great song to share.
+            Hi, I'm a developer who builds clean, reponsive websites and web applications. I enjoy the occasional craft/home brew, filmmaking, and hiking with my wife and our dog. If you're interested in building something together, don't hesitate to give me a shout.
             
           </p><a href="#contact" class="button">get in touch</a>
         </div>
@@ -26,28 +26,28 @@
                   <h3>Ceiba Adventures</h3></a></div>
             </div>
             <div class="project">
-              <div class="header"><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">
-                  <h3>Ecoss</h3></a></div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance" target="_blank">
-                  <h3>KLB Insurance</h3></a></div>
-            </div>
-            <div class="project">
               <div class="header"><a href="http://diabloburger.com" title="Diablo Burger" target="_blank">
                   <h3>Diablo Burger</h3></a></div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">
+                  <h3>Ecoss</h3></a></div>
             </div>
             <div class="project">
               <div class="header"><a href="http://helptile.com" title="HelpTile" target="_blank">
                   <h3>HelpTile</h3></a></div>
             </div>
             <div class="project">
+              <div class="header"><a href="http://mountainsportsflagstaff.com/" title="Mountain Sports Flagstaff" target="_blank">
+                  <h3>Mountain Sports Flagstaff</h3></a></div>
+            </div>
+            <div class="project">
               <div class="header"><a href="http://karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">
                   <h3>Karma Sushi Bar Grill</h3></a></div>
             </div>
             <div class="project">
-              <div class="header"><a href="http://mountainsportsflagstaff.com/" title="Mountain Sports Flagstaff" target="_blank">
-                  <h3>Mountain Sports Flagstaff</h3></a></div>
+              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance" target="_blank">
+                  <h3>KLB Insurance</h3></a></div>
             </div>
           </div>
         </div>
