--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='css/master.css' />
     <title>thaddeus reid | web developer and designer living in flagstaff, arizona</title>
     <body>
-      <div class="content">     
+      <div class="content"><img src="img/logo2.png" alt="thaddeus reid's logo" class="logo">
         <div class="wrapper">
           <h1>Thaddeus Reid</h1>
           <h4><em>Flagstaff, Arizona</em></h4>
