hide logo, modify intro text, add _blank target to social links

--- a/public/brew/coffee-porter-2016-02-28.html
+++ b/public/brew/coffee-porter-2016-02-28.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='css/master.css' />
     <title>thaddeus reid | web developer and designer living in flagstaff, arizona</title>
     <body>
-      <div class="content"><img src="img/logo2.png" alt="thaddeus reid's logo" class="logo">
+      <div class="content">
         <div class="wrapper">
           <h2>Ingredients</h2>
           <h3>Grain</h3>
