--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='css/master.css' />
     <title>thaddeus reid | web developer and designer living in flagstaff, arizona</title>
     <body>
-      <div class="content"><img src="img/logo2.png" alt="thaddeus reid's logo" class="logo">
+      <div class="content">
         <div class="wrapper">
           <h1>Thaddeus Reid</h1>
           <h4><em>Flagstaff, Arizona</em></h4>
           <p>
-            Hi, I'm a developer who builds clean, reponsive websites and web applications. I enjoy the occasional craft/home brew, filmmaking, and hiking with my wife and our dog. If you're interested in building something together, don't hesitate to give me a shout.
+            Hi, I'm a developer who builds reponsive websites and web applications. If you're interested in building something together, give me a shout.
             
           </p><a href="#contact" class="button">get in touch</a>
         </div>
@@ -53,7 +53,7 @@
         </div>
         <div id="contact" class="wrapper">
           <h2>Talk To Me</h2><a href="mailto:hello@thaddeusreid.com">hello@thaddeusreid.com</a>
-          <div class="social-links"><a href="https://github.com/thaddeusreid" class="social-github"></a><a href="https://twitter.com/thaddeus_reid" class="social-twitter"></a></div>
+          <div class="social-links"><a href="https://github.com/thaddeusreid" target="_blank" class="social-github"></a><a href="https://twitter.com/thaddeus_reid" target="_blank" class="social-twitter"></a></div>
         </div>
       </div>
       <div class="footer">
