publish: project updates, linked in footer
generated from commit 4884f5244bb0cd72d683e9a005d1c6d43b951ff9

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <h2>Projects</h2>
           <div id="projects" class="projects">
             <div class="project">
+              <div class="header"><a href="/projects/16-08-hiring-flagstaff.html" title="Hiring Flagstaff">
+                  <h3>Hiring Flagstaff</h3></a>
+              </div>
+            </div>
+            <div class="project">
               <div class="header"><a href="/projects/16-01-karma-sushi.html" title="Karma Sushi Bar Grill">
                   <h3>Karma Sushi Bar Grill</h3></a>
               </div>
@@ -32,7 +37,7 @@
               </div>
             </div>
             <div class="project">
-              <div class="header"><a href="http://mountainsportsflagstaff.com/" title="Mountain Sports Flagstaff">
+              <div class="header"><a href="/projects/15-10-mountain-sports-flagstaff.html" title="Mountain Sports Flagstaff">
                   <h3>Mountain Sports Flagstaff</h3></a>
               </div>
             </div>
@@ -60,7 +65,7 @@
         </div>
         <div id="contact" class="wrapper">
           <h2>Talk To Me</h2><a href="mailto:hello@thaddeusreid.com">hello@thaddeusreid.com</a>
-          <div class="social-links"><a href="https://github.com/thaddeusreid" target="_blank" class="social-github"></a>
+          <div class="social-links"><a href="https://github.com/thaddeusreid" target="_blank" class="social-github"></a><a href="https://linkedin.com/in/thaddeusstewart" target="_blank" class="social-linkedin"></a>
           </div>
         </div>
       </div>
