--- a/projects/16-01-karma-sushi.html
+++ b/projects/16-01-karma-sushi.html
@@ -11,9 +11,9 @@
   <body>
     <div class="content">
       <div class="wrapper project">
-        <h2> <a href="/#projects">&laquo; thaddeus reid</a></h2>
-        <h1><a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">Karma Sushi Bar Grill</a></h1><p>Sashimi, seaweed salad, and hot sake...an incredible treat in the high desert. I worked with the wonderful <a href="http://darcyfalk.com/">Darcy Falk</a>, <a href="http://www.jensaunders.com">Jen Saunders</a>, and <a href="http://www.2bdesign.com">Darryl Brown</a> to bring the responsive website to production. </p>
-<p>Built with the Yii Framework and now maintained solely by myself. Besides monthly marketing and performance maintenance, I built a secure employee portal for job orientation and training.</p>
+        <h2><a href="/#projects">&laquo; thaddeus reid</a></h2>
+        <h1><a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">Karma Sushi Bar Grill</a></h1><p>Sashimi, seaweed salad, and sake...an incredible treat in the high desert. I collaborated with the wonderful <a href="http://darcyfalk.com/">Darcy Falk</a>, <a href="http://www.jensaunders.com">Jen Saunders</a>, and <a href="http://www.2bdesign.com">Darryl Brown</a> to bring the responsive website to production.</p>
+<p>Built with Yii, a Rails-like PHP MVC application framework, this project began as a customer-facing platform for practical, business related information. After it&#39;s release in early 2015, I continue to maintain the website and introduce new features such as an employee portal for job orientation, training, and communication.</p>
 <a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank" class="button">see the website</a>
       </div>
     </div><script src='/js/main.js'></script>
