publish: project updates, linked in footer
generated from commit 4884f5244bb0cd72d683e9a005d1c6d43b951ff9

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="content">
         <h1>Thaddeus Reid</h1>
         <div class="wrapper">
-          <h4><em>Flagstaff, Arizona</em></h4>
+          <h4><em>Portland, OR</em></h4>
           <p>
             Hi, I'm a developer who builds responsive websites and web applications. If you're interested in building something together, give me a shout.
             
@@ -27,8 +27,23 @@
               </div>
             </div>
             <div class="project">
+              <div class="header"><a href="http://earthcolor.com" title="Earth Color">
+                  <h3>Earth Color</h3></a>
+              </div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://www.thearb.org" title="The Arboretum at Flagstaff">
+                  <h3>The Arboretum at Flagstaff</h3></a>
+              </div>
+            </div>
+            <div class="project">
               <div class="header"><a href="/projects/16-01-karma-sushi.html" title="Karma Sushi Bar Grill">
                   <h3>Karma Sushi Bar Grill</h3></a>
+              </div>
+            </div>
+            <div class="project">
+              <div class="header"><a href="http://www.flgterroir.com/" title="FLG Terrior">
+                  <h3>FLG Terrior</h3></a>
               </div>
             </div>
             <div class="project">
@@ -39,11 +54,6 @@
             <div class="project">
               <div class="header"><a href="/projects/15-10-mountain-sports-flagstaff.html" title="Mountain Sports Flagstaff">
                   <h3>Mountain Sports Flagstaff</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://klbinsurance.net/" title="KLB Insurance">
-                  <h3>KLB Insurance</h3></a>
               </div>
             </div>
             <div class="project">
