publish: project additions, removed description, updated details
generated from commit 1af52db9e021b34bd754cade0a1d1a8e73382013

--- a/projects/16-01-karma-sushi.html
+++ b/projects/16-01-karma-sushi.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="description of your site">
-    <meta name="author" content="author of the site">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Karma Sushi Bar Grill wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/master.css' />
-  </head>
-  <body>
-    <div class="content">
-      <div class="wrapper project">
-        <h2><a href="/#projects">&laquo; thaddeus reid</a></h2>
-        <h1><a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">Karma Sushi Bar Grill</a></h1><p>Sashimi, seaweed salad, and sake...an incredible treat in the high desert. I collaborated with the wonderful <a href="http://darcyfalk.com/">Darcy Falk</a>, <a href="http://www.jensaunders.com">Jen Saunders</a>, and <a href="http://www.2bdesign.us">Darryl Brown</a> to bring the responsive website to production.</p>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="description of your site"><meta name="author" content="author of the site"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Karma Sushi Bar Grill wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/build.027ad63fd9a69edc62400dbd973d9c3c.css' /></head><body><div class="content"><div class="wrapper project"><h2><a href="/#projects">&laquo; thaddeus reid</a></h2><h1><a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank">Karma Sushi Bar Grill</a></h1><p>Sashimi, seaweed salad, and sake...an incredible treat in the high desert. I collaborated with the wonderful <a href="http://darcyfalk.com/">Darcy Falk</a>, <a href="http://www.jensaunders.com">Jen Saunders</a>, and <a href="http://www.2bdesign.us">Darryl Brown</a> to bring the responsive website to production.</p>
 <p>Built with Yii, a Rails-like PHP MVC application framework, this project began as a customer-facing platform for practical, business related information. After it&#39;s release in early 2015, I continued to maintain the website and introduce new features such as an employee portal for job orientation, training, and communication.</p>
-<a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank" class="button">see the website</a>
-      </div>
-    </div><script src='/js/main.js'></script>
-  </body>
-</html>
+<a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill" target="_blank" class="button">see the website</a></div></div><script src='/js/build.bf81af91f58341c741059420f4eefac7.js'></script></body></html>
