--- a/index.html
+++ b/index.html
@@ -1,87 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="google-site-verification" content="nwyzSATa9wEFljRQ7y7n56XrHv0Sc164-IUgTop2nU4">
-    <meta name="description" content="Thaddeus Reid is a web developer, designer, and homebrew wizard living in Flagstaff, Arizona. Want to build something togther? Take a peek at his portfolio and leave a message.">
-    <meta name="author" content="Thaddeus Reid">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='/css/master.css' />
-    <title>thaddeus reid | web developer and designer living in flagstaff, arizona</title>
-    <body>
-      <div class="content">
-        <h1>Thaddeus Reid</h1>
-        <div class="wrapper">
-          <h4><em>Portland, OR</em></h4>
-          <p>
-            Hi, I'm a developer who builds responsive websites and web applications. If you're interested in building something together, give me a shout.
-            
-          </p><a href="#contact" class="button">get in touch</a>
-        </div>
-        <div class="wrapper">
-          <h2>Projects</h2>
-          <div id="projects" class="projects">
-            <div class="project">
-              <div class="header"><a href="/projects/16-08-hiring-flagstaff.html" title="Hiring Flagstaff">
-                  <h3>Hiring Flagstaff</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://earthcolor.com" title="Earth Color">
-                  <h3>Earth Color</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://www.thearb.org" title="The Arboretum at Flagstaff">
-                  <h3>The Arboretum at Flagstaff</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="/projects/16-01-karma-sushi.html" title="Karma Sushi Bar Grill">
-                  <h3>Karma Sushi Bar Grill</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://www.flgterroir.com/" title="FLG Terrior">
-                  <h3>FLG Terrior</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="/projects/15-12-help-tile.html" title="HelpTile">
-                  <h3>HelpTile</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="/projects/15-10-mountain-sports-flagstaff.html" title="Mountain Sports Flagstaff">
-                  <h3>Mountain Sports Flagstaff</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://ecoss.nau.edu" title="Ecoss">
-                  <h3>Ecoss</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://ceibaadventures.com/" title="Ceiba Adventures">
-                  <h3>Ceiba Adventures</h3></a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="header"><a href="http://diabloburger.com" title="Diablo Burger">
-                  <h3>Diablo Burger</h3></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="contact" class="wrapper">
-          <h2>Talk To Me</h2><a href="mailto:hello@thaddeusreid.com">hello@thaddeusreid.com</a>
-          <div class="social-links"><a href="https://github.com/thaddeusreid" target="_blank" class="social-github"></a><a href="https://linkedin.com/in/thaddeusstewart" target="_blank" class="social-linkedin"></a>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <p>2016</p>
-      </div><script src='/js/main.js'></script>
-    </body>
-  </head>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="google-site-verification" content="nwyzSATa9wEFljRQ7y7n56XrHv0Sc164-IUgTop2nU4"><meta name="description" content="thaddeus reid is a javascript developer living in portland, oregon."><meta name="author" content="thaddeus reid"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='/css/build.027ad63fd9a69edc62400dbd973d9c3c.css' /><title>thaddeus reid | javascript developer | portland, oregon</title><body><div class="content"><h1>Thaddeus Reid</h1><h4><em>Portland, OR</em></h4><div class="wrapper"><h2>Projects</h2><div id="projects" class="projects"><div class="project"><div class="header"><a href="http://truqcapp.com" title="TruQC"><h3>TruQC</h3></a></div></div><div class="project"><div class="header"><a href="http://tommy-oconnor.com" title="Tommy O'Connor Portfolio"><h3>Tommy O'Connor Portfolio</h3></a></div></div><div class="project"><div class="header"><a href="http://earthcolor.com" title="Earth Color"><h3>Earth Color</h3></a></div></div><div class="project"><div class="header"><a href="http://hiringflagstaff.com" title="Hiring Flagstaff"><h3>Hiring Flagstaff</h3></a></div></div><div class="project"><div class="header"><a href="http://www.thearb.org" title="The Arboretum at Flagstaff"><h3>The Arboretum at Flagstaff</h3></a></div></div><div class="project"><div class="header"><a href="http://helptile.com" title="HelpTile"><h3>HelpTile</h3></a></div></div><div class="project"><div class="header"><a href="http://www.flgterroir.com/" title="FLG Terrior"><h3>FLG Terrior</h3></a></div></div><div class="project"><div class="header"><a href="http://www.karmaflagstaff.com" title="Karma Sushi Bar Grill"><h3>Karma Sushi Bar Grill</h3></a></div></div><div class="project"><div class="header"><a href="http://mountainsportsflagstaff.com/" title="Mountain Sports Flagstaff"><h3>Mountain Sports Flagstaff</h3></a></div></div><div class="project"><div class="header"><a href="http://ecoss.nau.edu" title="Ecoss"><h3>Ecoss</h3></a></div></div><div class="project"><div class="header"><a href="http://ceibaadventures.com/" title="Ceiba Adventures"><h3>Ceiba Adventures</h3></a></div></div><div class="project"><div class="header"><a href="http://diabloburger.com" title="Diablo Burger"><h3>Diablo Burger</h3></a></div></div></div></div></div><div class="footer"><p>2017</p></div><script src='/js/build.bf81af91f58341c741059420f4eefac7.js'></script></body></head></html>
