--- a/projects/15-07-ecoss.html
+++ b/projects/15-07-ecoss.html
@@ -1,20 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="description of your site">
-    <meta name="author" content="author of the site">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecoss wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/master.css' />
-  </head>
-  <body>
-    <div class="content">
-      <div class="wrapper project">
-        <h2><a href="/#projects">&laquo; thaddeus reid</a></h2>
-        <h1><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">Ecoss</a></h1><p>The Center for Ecosystem Science and Society is an environmental research department at Northern Arizona University. Originally built in the Spring of 2015, this is a Wordpress website with a number of custom plugins to manage their dynamic content pipeline.</p>
-<a href="http://ecoss.nau.edu" title="Ecoss" target="_blank" class="button">see the website</a>
-      </div>
-    </div><script src='/js/main.js'></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="description of your site"><meta name="author" content="author of the site"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Ecoss wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/build.027ad63fd9a69edc62400dbd973d9c3c.css' /></head><body><div class="content"><div class="wrapper project"><h2><a href="/#projects">&laquo; thaddeus reid</a></h2><h1><a href="http://ecoss.nau.edu" title="Ecoss" target="_blank">Ecoss</a></h1><p>The Center for Ecosystem Science and Society is an environmental research department at Northern Arizona University. Originally built in the Spring of 2015, this is a Wordpress website with a number of custom plugins to manage their dynamic content pipeline.</p>
+<a href="http://ecoss.nau.edu" title="Ecoss" target="_blank" class="button">see the website</a></div></div><script src='/js/build.bf81af91f58341c741059420f4eefac7.js'></script></body></html>
