--- a/projects/16-03-the-arboretum-at-flagstaff.html
+++ b/projects/16-03-the-arboretum-at-flagstaff.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="description of your site">
-    <meta name="author" content="author of the site">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Arboretum at Flagstaff wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/master.css' />
-  </head>
-  <body>
-    <div class="content">
-      <div class="wrapper project">
-        <h2><a href="/#projects">&laquo; thaddeus reid</a></h2>
-        <h1><a href="http://www.thearb.org" title="The Arboretum at Flagstaff" target="_blank">The Arboretum at Flagstaff</a></h1><a href="http://www.thearb.org" title="The Arboretum at Flagstaff" target="_blank" class="button">see the website</a>
-      </div>
-    </div><script src='/js/main.js'></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="description of your site"><meta name="author" content="author of the site"><meta name="viewport" content="width=device-width, initial-scale=1"><title>The Arboretum at Flagstaff wesite by thaddeus reid | web developer and designer</title><link rel='stylesheet' href='/css/build.027ad63fd9a69edc62400dbd973d9c3c.css' /></head><body><div class="content"><div class="wrapper project"><h2><a href="/#projects">&laquo; thaddeus reid</a></h2><h1><a href="http://www.thearb.org" title="The Arboretum at Flagstaff" target="_blank">The Arboretum at Flagstaff</a></h1><a href="http://www.thearb.org" title="The Arboretum at Flagstaff" target="_blank" class="button">see the website</a></div></div><script src='/js/build.bf81af91f58341c741059420f4eefac7.js'></script></body></html>
